--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.14.0
 anyio==4.7.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -12,6 +13,7 @@ bleach==6.2.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+colorlog==6.9.0
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
@@ -51,6 +53,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
+Mako==1.3.8
 MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
@@ -64,6 +67,7 @@ networkx==3.4.2
 notebook==7.3.1
 notebook_shim==0.2.4
 numpy==2.2.0
+optuna==4.1.0
 overrides==7.7.0
 packaging==24.2
 pandocfilters==1.5.1
@@ -95,6 +99,7 @@ setuptools==75.6.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.36
 stack-data==0.6.3
 sympy==1.13.1
 terminado==0.18.1
