--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ filelock==3.16.1
 fonttools==4.55.2
 fqdn==1.5.1
 fsspec==2024.10.0
+graphviz==0.20.3
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -53,6 +54,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
+line_profiler==4.2.0
 Mako==1.3.8
 MarkupSafe==3.0.2
 matplotlib==3.9.3
@@ -96,6 +98,7 @@ rpds-py==0.22.3
 scipy==1.14.1
 Send2Trash==1.8.3
 six==1.17.0
+snakeviz==2.2.2
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
@@ -104,6 +107,8 @@ sympy==1.13.1
 terminado==0.18.1
 tinycss2==1.4.0
 torch==2.5.1
+torchvision==0.20.1
+torchviz==0.0.3
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -117,4 +122,3 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
-torchvision~=0.20.1
